--- a/source/_posts/仙人掌图专题.md
+++ b/source/_posts/仙人掌图专题.md
@@ -26,9 +26,9 @@ date: 2018-11-03 21:17:00
   
 	>给定仙人掌图（每条边至多在一个简单环上），求直径（最长的点对最短路径）。$n\leq 50000,m\leq {10}^{7}$。
 	
-    对仙人掌建立DFS树，参考无向图的点双连通分量Tarjan算法，在访问x时容易知道边$(x,y)$是否属于一个环。
+    对仙人掌建立DFS树，参考无向图的点双连通分量Tarjan算法，在访问$x$时容易知道边$(x,y)$是否属于一个环。
 
-	设$f[x]$表示$x$点向下延伸的最长链长度，对于不在环上的边$(x,y)$，有$f[x]=max{f[y]+1}$。统计直径可以在访问每个$y$时进行$ans=max{ans,f[x]+f[y]+1}$从而完成子树$x$对答案的贡献。
+	设$f[x]$表示$x$点向下延伸的最长链长度，对于不在环上的边$(x,y)$，有$f[x]=\max \lbrace f[y]+1 \rbrace $。统计直径可以在访问每个$y$时进行$ans=\max \lbrace ans,f[x]+f[y]+1\rbrace $从而完成子树$x$对答案的贡献。
 
 	对于一个环，只在其DFS树中深度最小的点进行处理（其它点直接忽略环边的存在），假设当前这个点为$x$，其与深度最大的点$y$的连边为$(x,y)$。（这条边只要满足$(fa[y] \neq x \ and\ dfn[y]>dfn[x])$就可以找到）
 
@@ -193,7 +193,7 @@ date: 2018-11-03 21:17:00
 
   2.处理方点：$s[i]$表示点$i$从所在环点$x$（深度最小）开始逆时针的距离，最终$s[x]$记为$s[N]$后$s[x]=0$。另外注意要记录一下环中点的编号顺序。
 
-  3.LCA：圆点直接计算，方点中$dis(A,B)=min{ s[A]+s[w]-s[B] , s[B]-s[A] }$（$A$在$B$的顺时针方向，否则交换$AB$）。
+  3.LCA：圆点直接计算，方点中$dis(A,B)=\min \lbrace s[A]+s[w]-s[B] , s[B]-s[A] \rbrace$（$A$在$B$的顺时针方向，否则交换$AB$）。
 
   4.注意防止访问父亲的边是$i\oplus 1$，初始$tot=1$。
 
