--- a/source/_posts/仙人掌图专题.md
+++ b/source/_posts/仙人掌图专题.md
@@ -11,6 +11,7 @@ date: 2018-11-03 21:17:00
 
 * 本文基本转载，极少原创，转载来源见Reference
 
+<!-- more -->
 ## DFS树
 * #### Definition
 
@@ -40,7 +41,7 @@ date: 2018-11-03 21:17:00
 
 	复杂度$O(m)$。
 
-  ``` c++
+  ```cpp
   #include<cstdio>
   #include<cstring>
   #include<cctype>
@@ -108,7 +109,7 @@ date: 2018-11-03 21:17:00
     >给定仙人掌图，求最大独立集（选择最大的点集使得点间无连边）。$n\leq 50000,m\leq 60000$。
     对仙人掌进行无向图的点双连通分量Tarjan算法，树边正常DP，环边$(low[y]\leq dfn[x])$无视。每个环在其深度最小的点整体处理（找到$(u,v)$只须$fa[v]≠u\ and\ dfn[y]>dfn[x]$）。
     
-  ``` c++
+  ```cpp
   #include<cstdio>
   #include<cctype>
   #include<algorithm>
@@ -199,7 +200,7 @@ date: 2018-11-03 21:17:00
 
   4.注意防止访问父亲的边是$i\oplus 1$，初始$tot=1$。
 
-  ``` c++
+  ```cpp
   #include<cstdio>
   #include<cstring>
   #include<algorithm>
